# aoc2020

./: LICENSE  aoc2020.cabal
src/: Day11A-with-arrays.hs  Day11A.hs  Day11B.hs  Day12A.hs  Day12B.hs  Day16A.hs  Day16B.hs  Day1B.hs  Day2A.hs  Day2B.hs  Day3A.hs  Day3B.hs  Day4A.hs  Day4B.hs  Day5A.hs  Day5B.hs  Day6A.hs  Day6B.hs  Day7A.hs  Day7B.hs
