cabal-version: 1.12

name:                aoc2020
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/TRManderson/aoc2020#readme
license:             BSD3
license-file:        LICENSE
author:              Taylor Manderson
maintainer:          me@trm.io
copyright:           2020 Taylor Manderson
build-type:          Simple
extra-source-files:  README.md

executable day1a
  hs-source-dirs:      src
  main-is:             Day1A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day1b
  hs-source-dirs:      src
  main-is:             Day1B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
