cabal-version: 1.12

name:                aoc2020
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/TRManderson/aoc2020#readme
license:             BSD3
license-file:        LICENSE
author:              Taylor Manderson
maintainer:          me@trm.io
copyright:           2020 Taylor Manderson
build-type:          Simple
extra-source-files:  README.md

executable day1a
  hs-source-dirs:      src
  main-is:             Day1A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day1b
  hs-source-dirs:      src
  main-is:             Day1B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day2a
  hs-source-dirs:      src
  main-is:             Day2A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text

executable day2b
  hs-source-dirs:      src
  main-is:             Day2B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text

executable day3a
  hs-source-dirs:      src
  main-is:             Day3A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day3b
  hs-source-dirs:      src
  main-is:             Day3B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parallel

executable day4a
  hs-source-dirs:      src
  main-is:             Day4A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
                     , containers

executable day4b
  hs-source-dirs:      src
  main-is:             Day4B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
                     , containers

executable day5a
  hs-source-dirs:      src
  main-is:             Day5A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec

executable day5b
  hs-source-dirs:      src
  main-is:             Day5B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec

executable day6a
  hs-source-dirs:      src
  main-is:             Day6A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day6b
  hs-source-dirs:      src
  main-is:             Day6B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day7a
  hs-source-dirs:      src
  main-is:             Day7A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , fgl

executable day7b
  hs-source-dirs:      src
  main-is:             Day7B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , fgl

executable day11a
  hs-source-dirs:      src
  main-is:             Day11A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable day11b
  hs-source-dirs:      src
  main-is:             Day11B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable day12a
  hs-source-dirs:      src
  main-is:             Day12A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec

executable day12b
  hs-source-dirs:      src
  main-is:             Day12B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec

executable day16a
  hs-source-dirs:      src
  main-is:             Day16A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , containers

executable day16b
  hs-source-dirs:      src
  main-is:             Day16B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
